Linked the contact button to the aside tag

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class=hero-inner>
             <h1>Ian King</h1>
             <h2>Science Teacher, Coder and Maker</h2>
-            <a href="#" class='btn'>Contact</a>
+            <a href="#contact" class='btn'>Contact</a>
         </div>
     </header>
 
@@ -20,7 +20,7 @@
 
     </main>
 
-    <aside>
+    <aside id="contact">
 
     </aside>
 
