--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
         <div class=hero-inner>
             <h1>Ian King</h1>
             <h2>Science Teacher, Coder and Maker</h2>
+            <a href="#about" class='btn'>About</a>
+            <a href="#projects" class='btn'>Projects</a>
             <a href="#contact" class='btn'>Contact</a>
         </div>
     </header>
 
     <main>
+        <div id="about" class="section">
 
+        </div>
+        <div id="projects" class="section">
+
+        </div>
     </main>
 
-    <aside id="contact">
+    <aside id="contact" class="section">
         
     </aside>
 
