commented unused code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 
     <main>
         <div id="about" class="section">
+            <div id="image-box">
+                <!-- <img class="logo" src="#" alt="javascript logo">
+                <img class="logo" src="#" alt="node.js logo">
+                <img class="logo" src="#" alt="html5 logo">
+                <img class="logo" src="#" alt="css 3 logo"> -->
+            </div>
+            <div class="text-box">
 
+            </div>
         </div>
         <div id="projects" class="section">
 
@@ -32,7 +40,7 @@
     </aside>
 
     <footer>
-        &copy; Ian King 2018
+        <!-- &copy; Ian King 2018 -->
     </footer>
 </body>
 </html>
