added placehoder text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <main>
         <div id="about" class="section">
             <div class="half-section text-box">
-        
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero nunc, interdum ut lorem sit amet, tincidunt consequat lorem. Etiam efficitur est eu arcu commodo finibus. Fusce mattis vulputate pellentesque. Donec semper leo a massa bibendum, eget pulvinar massa commodo. Nulla facilisis, nisi sit amet hendrerit placerat, dui risus congue leo, a ornare urna ex in mi. Duis quis est odio. Ut augue augue, aliquet vitae felis a, venenatis tempus magna. Pellentesque ultricies, ex in viverra vulputate, felis elit auctor metus, sed lacinia lectus sem nec erat. Fusce commodo interdum euismod.
+                </p>
+                <p>
+                    Nulla vehicula sem vitae semper vestibulum. Curabitur malesuada risus sem, eu lobortis justo accumsan at. Sed velit nisl, tempor sed massa eget, imperdiet aliquet sem. Mauris venenatis libero et justo vehicula, a elementum ipsum scelerisque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam et tristique augue. Maecenas eu augue eros. Aenean commodo vel erat in pretium. Praesent justo urna, ullamcorper quis nisl in, viverra lobortis velit. Vivamus lobortis a justo nec posuere.
+                </p>
             </div>
             <div class="half-section image-box">
                 <svg id="js-logo" class="logo" viewBox="0 0 128 128">
