added project cards to website

--- a/index.html
+++ b/index.html
@@ -20,12 +20,32 @@
     </header>
 
     <main>
-        <div id="about" class="section">
+        <div id="about" class="section blue-section">
             <div class="half-section text-box">
                 <h3>Software Engineer & Teacher</h3>
-                <p>
-                    Currently working in SEND science and computer science education. BSc Forensic Science, MSc Human Osteology and Funerary Archaeology, PGCE and Manchester Codes bootcamp graduate. Part time coding mentor.
-                </p>
+                <ul class="about-list">
+                    <li>
+                        Currently working in SEND Science and Computer Science education
+                    </li>
+                    <li>
+                        BSc Forensic Science
+                    </li>
+                    <li>
+                        Msc Human Osteology and Funerary Archaeology
+                    </li>
+                    <li>
+                        PGCE Secondary Science
+                    </li>
+                    <li>
+                        Manchester Codes Graduate and Coding Mentor
+                    </li>
+                    <li>
+                        Maker of educational apps and software tools
+                    </li>
+                    <li>
+                        Crafter and Raspberry Pi Enthusiast
+                    </li>
+                </ul>
                 
             </div>
             <div class="half-section image-box">
@@ -70,11 +90,21 @@
                 </svg>
             </div>
         </div>
-        <div id="projects" class="section text-box">
-            <span>Under Construction</span>
+        <div id="projects" class="section pink-section">
+            <div class="half-section project-card pirate-gui-card">
+                <h1>The Pirate GUI</h1>
+            </div>
+            <div class="half-section text-box">
+            </div>
         </div>
-        <div id="contact" class="section text-box">
-            <span>Under Construction</span>   
+        <div class="section blue-section">
+                <div class="half-section text-box">
+                </div>
+                <div class="half-section project-card cmail-card">
+                    <h1>cMail Email Simulator</h1>
+                </div>
+            </div>
+        <div id="contact" class="section pink-section">  
         </div>
     </main>
 
