added project descriptions

--- a/index.html
+++ b/index.html
@@ -91,14 +91,30 @@
             </div>
         </div>
         <div id="projects" class="section pink-section">
-            <div class="half-section project-card pirate-gui-card">
-                <h1>The Pirate GUI</h1>
-            </div>
+                <div class="half-section project-card pirate-gui-card">
+                    <h1>The Pirate GUI</h1>
+                </div>
             <div class="half-section text-box">
+                <p>
+                    <a href="https://www.tes.com/teaching-resource/the-pirate-game-end-of-term-activity-6258063">The Pirate Game </a> is a popular end of term activity for a lot of teachers and their classes. Originally published on <a href="http://tes.com
+                    ">TES</a>, it is a game of luck and strategy. On top of this are some practical Maths skills such and handing grid references and keeping track of your pirate gold.  
+                </p>
+                <p>
+                    <a href="https://ian-antking.github.io/the-pirate-gui/">The Pirate Gui</a> is a graphical tool for choosing and displaying random grid references as well as recording the turn order, just in case any disagreements happen. The page is built in vanilla javascript, with an object oriented approach to handling the map and grid references.
+                </p>
+                <div class="link-box">
+                    <a href="https://ian-antking.github.io/the-pirate-gui/">Website</a>
+                    <a href="https://github.com/ian-antking/the-pirate-gui">Repo</a>
+                </div>
             </div>
         </div>
-        <div class="section blue-section">
+        <div class="section odd-section blue-section">
                 <div class="half-section text-box">
+                    <p>A simulated email client for teaching Functional Skills English. Built in react as a single page application. Learners can reply to one of the messages in the inbox, or simple start from scratch with a new email. Clicking the send button formats the text for printing or saving as a pdf. Clicking back from an email in progress stores it for later.</p>
+                    <div class="link-box">
+                        <a href="https://ian-antking.github.io/cmail-js/">Website</a>
+                        <a href="https://github.com/ian-antking/cmail-js">Repo</a>
+                    </div>
                 </div>
                 <div class="half-section project-card cmail-card">
                     <h1>cMail Email Simulator</h1>
