--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="section odd-section blue-section">
                 <div class="half-section text-box">
-                    <p>A simulated email client for teaching Functional Skills English. Built in react as a single page application. Learners can reply to one of the messages in the inbox, or simple start from scratch with a new email. Clicking the send button formats the text for printing or saving as a pdf. Clicking back from an email in progress stores it for later.</p>
+                    <p>A simulated email client for teaching Functional Skills English. Built in react as a single page application. Learners can reply to one of the messages in the inbox, or start from scratch with a new email. Clicking the send button formats the text for printing or saving as a pdf. Clicking back from an email in progress stores it for later.</p>
                     <div class="link-box">
                         <a href="https://ian-antking.github.io/cmail-js/">Website</a>
                         <a href="https://github.com/ian-antking/cmail-js">Repo</a>
