added landscape detection to media query

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 <body>
     <header>
         <div class=hero-inner>
-            <h1>Ian King</h1>
-            <h2>Science Teacher, Coder and Maker</h2>
-            <a href="#about" class='btn'>About</a>
-            <a href="#projects" class='btn'>Projects</a>
-            <a href="#contact" class='btn'>Contact</a>
+            <div class="title-box">
+                <h1>Ian King</h1>
+                <h2>Science Teacher, Coder and Maker</h2>
+            </div>
+            <div class="button-box">
+                <a href="#about" class='btn'>About</a>
+                <a href="#projects" class='btn'>Projects</a>
+                <a href="#contact" class='btn'>Contact</a>
+            </div>
         </div>
     </header>
 
