--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="button-box">
                 <a href="#about" class='btn'>About</a>
                 <a href="#projects" class='btn'>Projects</a>
-                <a href="#contact" class='btn'>Contact</a>
+                <!-- <a href="#contact" class='btn'>Contact</a> -->
             </div>
         </div>
     </header>
@@ -124,8 +124,8 @@
                     </div>
                 </div>
             </div>
-        <div id="contact" class="section pink-section">  
-        </div>
+        <!-- <div id="contact" class="section pink-section">  
+        </div> -->
     </main>
 
 
